<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_tag_about"
    >
  <PreferenceCategory
      android:title="@string/about"
      >
    <Preference
        android:title="@string/about"
        android:summary="@string/about_github"
        android:icon="@drawable/adaptive_icon_foreground"
        >
      <intent
          android:action="android.intent.action.VIEW"
          android:data="https://github.com/fishy/nene"
        />
    </Preference>
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/credits"
      >
    <Preference
        android:summary="@string/credit_icon"
        >
      <intent
          android:action="android.intent.action.VIEW"
          android:data="https://www.flaticon.com/free-icon/goose_4026832"
        />
    </Preference>
  </PreferenceCategory>
</androidx.preference.PreferenceScreen>
